--- a/css/hero.css
+++ b/css/hero.css
@@ -5,7 +5,6 @@
     align-items: center;
     justify-content: center;
     height: 90vh;
-    background: linear-gradient(120deg, var(--color-primary-light) 0%, var(--color-secondary-light) 100%);
     overflow: hidden;
     margin-top: 0;
     margin-bottom: 0;
@@ -14,6 +13,22 @@
     gap: 3.5rem;
     z-index: 3;
     box-sizing: border-box;
+}
+
+.hero-section::before {
+    content: '';
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    right: -20px;
+    bottom: -20px;
+    background-image: linear-gradient(rgba(232, 243, 242, .2), rgba(232, 243, 242, .2)), url('../images/background.jpg'); /* Change this to your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(10px) saturate(0.5);
+    opacity: 1;
+    z-index: 0;
 }
 
 .hero-content {
